--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "cSpell.ignoreWords": [
     "datetime",
     "plpgsql"
-  ]
+  ],
+  "java.completion.enabled": false,
+  "java.test.editor.enableShortcuts": false
 }
