--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,15 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
-
-    {
-      "type": "ruby-debug",
-      "request": "launch",
-      "name": "Launch File",
-      "program": "${workspaceFolder}/${command:AskForProgramName}",
-      "programArgs": [],
-      "useBundler": false
-    }
+  {
+    "cwd": "${workspaceRoot}",
+    "name": "Listen for rdebug-ide",
+    "type": "Ruby",
+    "request": "attach",
+    "remoteHost": "127.0.0.1",
+    "remotePort": "1234",
+    "remoteWorkspaceRoot": "${workspaceRoot}"
+  },
+  
   ]
 }
